2018-June-07 Struan Robertson

		* UnitTest.cpp: Added test for normal distribution.

		* Methyl_H_to_Methane_FTST_rev.xml, Methyl_H_to_Methane_FTST_irrer.xml: Updated tests
		to a larger range of temperatures.

2018-May-07 Struan Robertson

		* CollisionOperator.cpp: Code added to estimate equilibrium populations when the linear 
		algebra method returns zero because of machine precision.

		* gStructure.cpp: Fix for atomic multiplicity bug and baseline update.

2018-April-24 Struan Robertson

		* gDensityOfStates.cpp: Fix for parse only bug.

2018-April-22 Struan Robertson

		* main.cpp: Fix for incorrect file changes when run in parallel.

		* Makefile: Corrected for missing source fule.

		* Baseline updates.

2018-April-18 Chris Morley

		* Collision Operator.cpp: ensure the eigenvalue closeness warning is written to both
		  console and log file.
		* examples/AnalyticalRepresentation/Plog.xml,
		schemas/mesmerPlugins.xsd,src/plugins/AnalyticalRepresentation.cpp:
		Use me:doForAllBathGases (lc d) as the alternative to me:chebDoForAllBathGases
 
2018-April-16 Struan Robertson

		* AnalyticalRepresentation.cpp: Test routine for Plog representation added and 
		associated baselines updated.

2018-April-10 Struan Robertson

		* ConditionsManager.cpp: Bug fix for incorrect reading of weight data.

		* system.cpp, defaults.xml:  Bug fix for me:ForceMacroDetailedBalance default.

		* Documentation update.

2018-April-08 Struan Robertson

		* BimolecularSinkReaction.cpp, SimpleBimolecularSink.cpp: altered to reduce verbosity.

		* Missing header files added to VC15 project.

2018-April-08 Struan Robertson

		* AnalyticalRepresentation.cpp: Parameter units altered to cal/mol as required.

		* system.cpp, defaults.xml: altered so that me:ForceMacroDetailedBalance is always set.

		* system.cpp, ConditionsManager.cpp/.h: altered so that expt. trace data can be weighted.

		* Linux32 baseline extension (for analytical representation) and update.
