@@ -18,7 +18,7 @@
     <ProjectGuid>{2BCC6B10-A435-4738-985B-3B3E405D568E}</ProjectGuid>
     <RootNamespace>Mesmer</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -150,6 +150,7 @@
     <ClCompile Include="..\..\src\gStructure.cpp" />
     <ClCompile Include="..\..\src\gTransitionState.cpp" />
     <ClCompile Include="..\..\src\gWellProperties.cpp" />
+    <ClCompile Include="..\..\src\MolecularComponents.cpp" />
     <ClCompile Include="..\..\src\plugins\AnalyticalRepresentation.cpp" />
     <ClCompile Include="..\..\src\plugins\BeyerSwinehart.cpp" />
     <ClCompile Include="..\..\src\plugins\BoltzmannDistribution.cpp" />
