@@ -14,6 +14,7 @@
     <ProjectGuid>{772A61A8-365D-4C72-8B17-33B30767E2F8}</ProjectGuid>
     <RootNamespace>TinyXML</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
