@@ -14,6 +14,7 @@
     <ProjectGuid>{71A7FD85-66B8-4235-91AC-914AC894D6E1}</ProjectGuid>
     <RootNamespace>qd</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
